list item component

--- a/YT_FE/src/app/admin/components/panel/panel.component.scss
+++ b/YT_FE/src/app/admin/components/panel/panel.component.scss
@@ -1,1 +1,14 @@
+@import '../../../../assets//scss/imports';
 
+.panel {
+  position: relative;
+
+  &_tab {
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+  }
+}
