--- a/YT_FE/src/assets/scss/_components.scss
+++ b/YT_FE/src/assets/scss/_components.scss
@@ -4,27 +4,27 @@
   flex-direction: column;
   align-items: center;
 
-  &_form {
-    position: relative;
-    background-color: $color-tertiary;
-    padding: 1.5rem;
-    box-shadow: $box-shadow-lg;
-    transition: all 0.3s;
-
-    &-error {
-      text-align: center;
-      font-weight: 600;
-      color: $error-message-color;
-      margin-top: 1rem;
-      transition: all 0.4s;
-    }
-  }
-
   &_info {
     margin-top: 2rem;
     color: $color-tertiary;
     font-size: 1.25rem;
     text-shadow: $text-shadow-sm;
     text-align: center;
+  }
+}
+
+.form {
+  position: relative;
+  background-color: $color-tertiary;
+  padding: 1.5rem;
+  box-shadow: $box-shadow-lg;
+  transition: all 0.3s;
+
+  &-error {
+    text-align: center;
+    font-weight: 600;
+    color: $error-message-color;
+    margin-top: 1rem;
+    transition: all 0.3s;
   }
 }
