--- a/YT_FE/src/app/admin/components/db-item/db-item.component.html
+++ b/YT_FE/src/app/admin/components/db-item/db-item.component.html
@@ -1,12 +1,18 @@
 <div class="mat-elevation-z4 item rounded">
   <div class="item_info">
-    <span class="item_info-title">Item title</span>
+    <span class="item_info-title">{{ dbItem.title }}</span>
   </div>
   <div class="item_action">
-    <span matRipple class="color-secondary text-color-white item_action-button rounded">
+    <span
+      matRipple
+      class="color-secondary text-color-white item_action-button rounded"
+    >
       <i class="fas fa-pen"></i>
     </span>
-    <span matRipple class="color-secondary text-color-white item_action-button rounded">
+    <span
+      matRipple
+      class="color-secondary text-color-white item_action-button rounded"
+    >
       <i class="fas fa-trash-alt"></i>
     </span>
   </div>
