--- a/YT_FE/src/app/admin/components/db-item/db-item.component.scss
+++ b/YT_FE/src/app/admin/components/db-item/db-item.component.scss
@@ -30,7 +30,6 @@
     align-items: center;
     font-size: 1.2rem;
     margin-right: 1rem;
-
   }
 
   &_action {
@@ -43,12 +42,19 @@
 
     &-button {
       cursor: pointer;
+      transition: all 0.3s;
       width: 2rem;
       height: 2rem;
-      padding: .25rem .5rem !important;
-      margin-left: .25rem;
-      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+      padding: 0.25rem 0.5rem !important;
+      margin-left: 0.25rem;
+      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
       text-align: center;
+
+      &:active {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+          0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      }
     }
   }
 }
