--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.html
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.html
@@ -1,20 +1,18 @@
-<div class="list">
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
-  <yt-db-item></yt-db-item>
+<div class="search rounded">
+  <i class="fas fa-search search_icon"></i>
+  <input placeholder="Filter" class="rounded" />
 </div>
+<div class="list rounded">
+  <yt-db-item
+    *ngFor="let dbItem of dbItems; let i = index"
+    [dbItem]="dbItem"
+    #item
+    [@domFader]="item"
+  ></yt-db-item>
+</div>
+<div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
+  <mat-spinner aria-label="loading content"></mat-spinner>
+</div>
+<!-- <button mat-raised-button color="primary">
+  Update
+</button> -->
