--- a/YT_FE/src/app/admin/components/genres/genres.component.scss
+++ b/YT_FE/src/app/admin/components/genres/genres.component.scss
@@ -3,10 +3,23 @@
 .x {
   position: relative;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  // justify-content: space-between;
+  // align-items: center;
 
   //   overflow: none;
+  padding: 2rem 1rem;
   height: 100%;
   //   width: 100%;
+
+  &_list {
+    justify-self: flex-start;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &_actions {
+    // justify-self: center;
+    margin: 0 auto;
+    align-self: center;
+  }
 }
