--- a/YT_FE/src/app/admin/components/panel/panel.component.html
+++ b/YT_FE/src/app/admin/components/panel/panel.component.html
@@ -1,17 +1,14 @@
 <yt-header></yt-header>
 
 <mat-tab-group>
-  <mat-tab label="Songs">
-
-  </mat-tab>
+  <mat-tab label="Songs"> </mat-tab>
   <mat-tab label="Artists">
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos vel laudantium nesciunt ut error libero
-    reprehenderit officiis ipsum necessitatibus? Accusantium esse similique at aut. Officia, sed commodi. Natus,
-    ratione.
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos vel
+    laudantium nesciunt ut error libero reprehenderit officiis ipsum
+    necessitatibus? Accusantium esse similique at aut. Officia, sed commodi.
+    Natus, ratione.
   </mat-tab>
   <mat-tab label="Genres">
-    <!-- <div class="panel_tab"> -->
     <yt-genres></yt-genres>
-    <!-- </div> -->
   </mat-tab>
 </mat-tab-group>
