--- a/YT_FE/src/styles.scss
+++ b/YT_FE/src/styles.scss
@@ -14,10 +14,9 @@ html {
   margin: 0;
 }
 
-
 // CUSTOM SCROLLBAR
 ::-webkit-scrollbar {
-  width: .5rem;
+  width: 0.3rem;
 }
 
 /* Track */
@@ -29,7 +28,7 @@ html {
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: $color-primary;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 /* Handle on hover */
@@ -37,7 +36,6 @@ html {
   background: $color-secondary;
   cursor: pointer;
 }
-
 
 // OVERRIDING BOOTSTRAP STYLES
 .form-control {
@@ -88,7 +86,7 @@ a:hover {
 
 // OVERRIDING MATERIAL STYLES
 .mat-tab-group {
-  height:calc(100vh - #{$header-height});
+  height: calc(100vh - #{$header-height});
 }
 
 .mat-tab-header {
@@ -97,7 +95,7 @@ a:hover {
 
 .mat-tab-body-wrapper {
   width: 100%;
-  height:calc(100% - #{$mat-tab-header-height});
+  height: calc(100% - #{$mat-tab-header-height});
   overflow: hidden !important;
 }
 
@@ -121,6 +119,6 @@ a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  transition: all .3s;
+  transition: all 0.3s;
   background-color: rgba($color-tertiary, 0.5);
 }
