--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.html
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.html
@@ -3,16 +3,14 @@
   <input placeholder="Filter" class="rounded" />
 </div>
 <div class="list rounded">
-  <yt-db-item
-    *ngFor="let dbItem of dbItems; let i = index"
-    [dbItem]="dbItem"
-    #item
-    [@domFader]="item"
-  ></yt-db-item>
+  <span class="list_title">List of all {{title}}</span>
+  <yt-db-item *ngFor="let dbItem of dbItems; let i = index" [dbItem]="dbItem" #item [@domFader]="item"></yt-db-item>
+  <div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
+    <mat-spinner aria-label="loading content"></mat-spinner>
+  </div>
 </div>
-<div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
-  <mat-spinner aria-label="loading content"></mat-spinner>
-</div>
+
+
 <!-- <button mat-raised-button color="primary">
   Update
 </button> -->
