--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
@@ -10,7 +10,7 @@
   width: fit-content;
   background-color: #00000008;
   box-shadow: $google-shadow-sm;
-  transition: all .3s;
+  transition: all 0.3s;
 
   &_title {
     width: 100%;
