--- a/YT_FE/src/app/admin/components/genres/genres.component.html
+++ b/YT_FE/src/app/admin/components/genres/genres.component.html
@@ -1,5 +1,9 @@
 <div class="x">
-  <yt-db-items-list class="x_list" [title]="'Genres'" [dbItems]="dbItems$ | async">
+  <yt-db-items-list
+    class="x_list"
+    [title]="'Genres'"
+    [dbItems]="dbItems$ | async"
+  >
   </yt-db-items-list>
 
   <div class="x_actions">
@@ -11,21 +15,27 @@
       </div>
       <div class="form-group">
         <mat-form-field class="full-width">
-          <input matInput type="text" placeholder="Genre" formControlName="name" />
+          <input
+            matInput
+            type="text"
+            placeholder="Genre"
+            formControlName="name"
+          />
         </mat-form-field>
       </div>
 
-      <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form">
+      <button
+        type="submit"
+        mat-raised-button
+        color="primary"
+        matTooltip="Click the button to submit the form"
+      >
         Save
       </button>
-      <!--   
-      <span #error [@domFader]="error" *ngIf="errorMessage !== undefined" class="credentials_form-error form-text ">
+
+      <!-- <span #error [@domFader]="error" *ngIf="errorMessage !== undefined" class="credentials_form-error form-text ">
         {{ errorMessage }}
-      </span>
-  -->
-      <div #s class="spinner" [@domFader]="s" *ytSpinnerToggle>
-        <mat-spinner aria-label="loading content"></mat-spinner>
-      </div>
+      </span> -->
     </form>
   </div>
 </div>
