--- a/YT_FE/src/app/admin/components/db-item/db-item.component.html
+++ b/YT_FE/src/app/admin/components/db-item/db-item.component.html
@@ -1,19 +1,23 @@
 <div class="mat-elevation-z4 item rounded">
   <div class="item_info">
-    <span class="item_info-title">{{ dbItem.title }}</span>
+    <span class="item_info-title"
+      >#{{ index + 1 }}.&nbsp;{{ dbItem.title }}</span
+    >
   </div>
   <div class="item_action">
     <span
       matRipple
-      class="color-secondary text-color-white item_action-button rounded"
+      class="color-ok text-color-white item_action-button rounded"
+      (click)="onEdit()"
     >
-      <i class="fas fa-pen"></i>
+      <i class="fas fa-pen fa-xs"></i>
     </span>
     <span
       matRipple
-      class="color-secondary text-color-white item_action-button rounded"
+      class="color-error text-color-white item_action-button rounded"
+      (click)="onDelete()"
     >
-      <i class="fas fa-trash-alt"></i>
+      <i class="fas fa-trash-alt fa-xs"></i>
     </span>
   </div>
 </div>
