--- a/YT_FE/src/app/admin/components/db-item/db-item.component.scss
+++ b/YT_FE/src/app/admin/components/db-item/db-item.component.scss
@@ -5,6 +5,7 @@
   height: fit-content;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: $color-tertiary;
   padding: 0.5rem;
   margin: 0.5rem 0;
@@ -41,15 +42,18 @@
     width: fit-content;
 
     &-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
       cursor: pointer;
       transition: all 0.3s;
-      width: 2rem;
-      height: 2rem;
-      padding: 0.25rem 0.5rem !important;
+      width: 1.5rem;
+      height: 1.5rem;
+      // padding: 0.25rem 0.5rem !important;
       margin-left: 0.25rem;
       box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
         0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-      text-align: center;
 
       &:active {
         box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
