--- a/YT_FE/src/app/admin/components/genres/genres.component.scss
+++ b/YT_FE/src/app/admin/components/genres/genres.component.scss
@@ -6,15 +6,19 @@
   // justify-content: space-between;
   // align-items: center;
 
-  //   overflow: none;
-  padding: 2rem 1rem;
+  // //   overflow: none;
+  // padding: 2rem 1rem;
   height: 100%;
   //   width: 100%;
 
   &_list {
+    // padding: 1rem 0 0 1rem;
+    overflow-x: visible;
     justify-self: flex-start;
     display: flex;
     flex-direction: column;
+
+    background: rgba(0, 0, 0, 0.03);
   }
 
   &_actions {
