--- a/YT_FE/src/assets/scss/_components.scss
+++ b/YT_FE/src/assets/scss/_components.scss
@@ -23,7 +23,7 @@
   &-error {
     text-align: center;
     font-weight: 600;
-    color: $error-message-color;
+    color: $color-error;
     margin-top: 1rem;
     transition: all 0.3s;
   }
@@ -35,8 +35,9 @@
   align-items: center;
   width: 100%;
   // padding: 0.5rem;
+  background-color: $color-tertiary;
   height: fit-content;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
   font-size: 1.1rem;
