--- a/YT_FE/src/assets/scss/_variables.scss
+++ b/YT_FE/src/assets/scss/_variables.scss
@@ -4,7 +4,8 @@ $color-primary: #3f51b5;
 $color-secondary: #505050;
 $color-tertiary: #ffffff;
 
-$error-message-color: #f44336;
+$color-error: #f44336;
+$color-ok: #20c22d;
 
 // SHADOWS
 $google-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.4),
