default connection strings

--- a/YT_FE/src/app/admin/components/panel/panel.component.html
+++ b/YT_FE/src/app/admin/components/panel/panel.component.html
@@ -1,12 +1,8 @@
 <yt-header></yt-header>
 
 <mat-tab-group>
-  <mat-tab label="Songs"> </mat-tab>
-  <mat-tab label="Artists">
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos vel
-    laudantium nesciunt ut error libero reprehenderit officiis ipsum
-    necessitatibus? Accusantium esse similique at aut. Officia, sed commodi.
-    Natus, ratione.
+  <mat-tab label="Songs">it works</mat-tab>
+  <mat-tab label="Artists">it works
   </mat-tab>
   <mat-tab label="Genres">
     <yt-genres></yt-genres>
