--- a/YT_FE/src/app/admin/components/genres/genres.component.html
+++ b/YT_FE/src/app/admin/components/genres/genres.component.html
@@ -2,7 +2,7 @@
   <yt-db-items-list
     class="x_list"
     [title]="'Genres'"
-    [dbItems]="dbItems$ | async"
+    [dbItemsCached]="dbItems$ | async"
   >
   </yt-db-items-list>
   <mat-divider [vertical]="true"></mat-divider>
