--- a/YT_FE/src/assets/scss/_components.scss
+++ b/YT_FE/src/assets/scss/_components.scss
@@ -17,7 +17,7 @@
   position: relative;
   background-color: $color-tertiary;
   padding: 1.5rem;
-  box-shadow: $box-shadow-md;
+  box-shadow: $google-shadow;
   transition: all 0.3s;
 
   &-error {
