--- a/YT_FE/src/app/shared/components/spinner/spinner.component.html
+++ b/YT_FE/src/app/shared/components/spinner/spinner.component.html
@@ -1,3 +1,3 @@
-<div #s class="spinner" [@test]="s" *ngIf="spin">
+<div #s class="spinner" [@ngIfFade]="s" *ngIf="spin">
   <mat-spinner aria-label="loading content"></mat-spinner>
 </div>
