bulk delete in progress

--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.html
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.html
@@ -1,16 +1,50 @@
 <div class="list-header">
+  <span class="list-header_title">List of all {{ title }}</span>
   <div class="search rounded">
     <i class="fas fa-search search_icon"></i>
-    <input placeholder="Filter" class="rounded" #filter (input)="onSearch(filter)" />
+    <input
+      placeholder="Filter"
+      class="rounded"
+      #filter
+      (input)="onSearch(filter)"
+    />
   </div>
-  <span class="list-header_title">List of all {{ title }}</span>
+  <div class="list-header_options">
+    <mat-checkbox
+      color="primary"
+      class="list-header_options-selection"
+      [(ngModel)]="checked"
+      [labelPosition]="'after'"
+      (click)="onCheck()"
+    >
+      <i class="fas fa-tasks ml-2"></i>
+    </mat-checkbox>
+    <span
+      #bulkDelete
+      [@ngIfFade]="bulkDelete"
+      *ngIf="checked"
+      matRipple
+      class="color-error text-color-white list-header_options-button rounded"
+      (click)="onDelete()"
+    >
+      <i class="fas fa-trash-alt fa-xs"></i>
+    </span>
+  </div>
 </div>
+
 <mat-divider></mat-divider>
+
 <div class="list">
   <div *ngFor="let dbItem of dbItems; let i = index">
-    <yt-db-item #item [@ngIfFade]="item" [dbItem]="dbItem" [index]="i">
+    <yt-db-item
+      #item
+      [@ngIfFade]="item"
+      [checked]="checked"
+      [dbItem]="dbItem"
+      [index]="i"
+    >
     </yt-db-item>
   </div>
 
-  <yt-spinner [spin]="spin"></yt-spinner>
+  <!-- <yt-spinner *ngIf="spin"></yt-spinner> -->
 </div>
