--- a/YT_FE/src/app/admin/components/genres/genres.component.html
+++ b/YT_FE/src/app/admin/components/genres/genres.component.html
@@ -1,5 +1,9 @@
 <div class="x">
-  <yt-db-items-list class="x_list" [title]="'Genres'" [dbItemsCached]="dbItems$ | async">
+  <yt-db-items-list
+    class="x_list"
+    [title]="'Genres'"
+    [dbItemsCached]="dbItems$ | async"
+  >
   </yt-db-items-list>
   <mat-divider [vertical]="true"></mat-divider>
   <div class="x_actions">
@@ -11,21 +15,38 @@
       </div>
       <div class="form-group">
         <mat-form-field class="full-width">
-          <input matInput type="text" placeholder="Genre" formControlName="name" />
+          <input
+            matInput
+            type="text"
+            placeholder="Genre"
+            formControlName="name"
+          />
         </mat-form-field>
       </div>
 
       <div class="form_buttons">
-        <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form">
+        <button
+          type="submit"
+          mat-raised-button
+          color="primary"
+          matTooltip="Click the button to submit the form"
+        >
           Save
         </button>
         <div class="margin-left-auto" *ngIf="id.value" #new [@ngIfFade]="new">
-          <button type="button" mat-raised-button color="primary" matTooltip="Add new genre" (click)="resetForm()">
+          <button
+            type="button"
+            mat-raised-button
+            color="primary"
+            matTooltip="Add new genre"
+            (click)="resetForm()"
+          >
             New
           </button>
         </div>
       </div>
 
+      <!-- <yt-spinner *ngIf="spin"></yt-spinner> -->
     </form>
   </div>
 </div>
