--- a/YT_FE/src/styles.scss
+++ b/YT_FE/src/styles.scss
@@ -108,4 +108,11 @@ a:hover {
   overflow: hidden !important;
 }
 
+.mat-checkbox-layout {
+  margin-bottom: 0;
+}
+
+.mat-checkbox-inner-container {
+  background-color: $color-tertiary;
+}
 //
