--- a/YT_FE/src/app/admin/components/db-item/db-item.component.scss
+++ b/YT_FE/src/app/admin/components/db-item/db-item.component.scss
@@ -1,5 +1,9 @@
 @import '../../../../assets/scss/imports';
 
+.item_wrapper {
+  display: flex;
+  align-items: center;
+}
 .item {
   width: 100%;
   height: fit-content;
@@ -59,6 +63,14 @@
         box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
           0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
       }
+    }
+
+    &-checkbox {
+      display: flex;
+      align-items: center;
+      margin-right: 8px;
+      // box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+      //   0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     }
   }
 }
