--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
@@ -6,12 +6,44 @@
   &_title {
     width: 100%;
     display: block;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
 
     font-weight: 300;
     font-style: italic;
     text-align: center;
     color: $color-secondary;
+  }
+
+  &_options {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+
+    &-selection {
+      justify-self: flex-end;
+    }
+
+    &-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      cursor: pointer;
+      transition: all 0.3s;
+      width: 1.5rem;
+      height: 1.5rem;
+      // padding: 0.25rem 0.5rem !important;
+      margin-left: 1rem;
+      // margin-left: auto;
+      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+        0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+      &:active {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+          0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      }
+    }
   }
 }
 .list {
