--- a/YT_FE/src/styles.scss
+++ b/YT_FE/src/styles.scss
@@ -115,4 +115,10 @@ a:hover {
 .mat-checkbox-inner-container {
   background-color: $color-tertiary;
 }
+
+.mat-tab-label-content {
+  font-weight: 600;
+  font-size: 1rem;
+}
+
 //
