--- a/YT_FE/src/app/admin/components/genres/genres.component.html
+++ b/YT_FE/src/app/admin/components/genres/genres.component.html
@@ -18,7 +18,7 @@
           <input
             matInput
             type="text"
-            placeholder="Genre"
+            placeholder="Name"
             formControlName="name"
           />
         </mat-form-field>
