--- a/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
+++ b/YT_FE/src/app/admin/components/db-items-list/db-items-list.component.scss
@@ -19,10 +19,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     margin-top: 1rem;
 
     &-selection {
-      // justify-self: flex-end;
+      display: flex;
+      align-items: center;
     }
 
     &-button {
@@ -34,9 +36,8 @@
       transition: all 0.3s;
       width: 1.5rem;
       height: 1.5rem;
-      // padding: 0.25rem 0.5rem !important;
       margin-left: 1rem;
-      // margin-left: auto;
+      margin-right: auto;
       box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
         0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
@@ -46,18 +47,23 @@
       }
     }
 
-    &-sort {
-      margin-left: auto;
-      width: 3rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    // &-sort {
+    //   width: 3rem;
+    //   height: 24px;
+    //   overflow: visible;
+    //   position: relative;
+    //   margin-left: auto;
+    //   display: flex;
+    //   // justify-content: space-between;
+    //   align-items: center;
 
-      span {
-        cursor: pointer;
-        // margin: 0 0.5rem;
-      }
-    }
+    //   span {
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    //     cursor: pointer;
+    //   }
+    // }
   }
 }
 .list {
