--- a/YT_FE/src/app/admin/components/panel/panel.component.html
+++ b/YT_FE/src/app/admin/components/panel/panel.component.html
@@ -1,10 +1,9 @@
 <yt-header></yt-header>
 
 <mat-tab-group>
-  <mat-tab label="Songs">it works</mat-tab>
-  <mat-tab label="Artists">it works
-  </mat-tab>
   <mat-tab label="Genres">
     <yt-genres></yt-genres>
   </mat-tab>
+  <mat-tab label="Songs">it works</mat-tab>
+  <mat-tab label="Artists">it works </mat-tab>
 </mat-tab-group>
