--- a/YT_FE/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/YT_FE/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -1,7 +1,10 @@
-<h2 mat-dialog-title>Delete all</h2>
-<mat-dialog-content>Are you sure?</mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-  <button mat-button [mat-dialog-close]="true">Yes</button>
-</mat-dialog-actions>
+<div class="dialog">
+  <h2 class="dialog_title" mat-dialog-title>Delete all {{data}}</h2>
+  <mat-dialog-content>Are you sure?</mat-dialog-content>
+  <div class="dialog_actions">
+    <button color="primary" mat-raised-button mat-dialog-close (click)="closeDialog(actions.NO)">No</button>
+    <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
+    <button mat-raised-button color="warn" mat-dialog-close (click)="closeDialog(actions.YES)"
+      class="dialog_actions-button">Yes</button>
+  </div>
+</div>
