--- a/YT_FE/src/assets/scss/_variables.scss
+++ b/YT_FE/src/assets/scss/_variables.scss
@@ -9,8 +9,10 @@ $color-ok: #20c22d;
 
 // SHADOWS
 $google-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.4),
-  0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 1px 18px 0 rgba(0, 0, 0, 0.2);
-$google-shadow-sm: 0 2px 2px rgba(0, 0, 0, 0.24), 0 0 2px rgba(0, 0, 0, 0.12);
+0 6px 10px 0 rgba(0, 0, 0, 0.2),
+0 1px 18px 0 rgba(0, 0, 0, 0.2);
+$google-shadow-sm: 0 2px 2px rgba(0, 0, 0, 0.24),
+0 0 2px rgba(0, 0, 0, 0.12);
 
 $box-shadow-lg: 0 0.2rem 1.25rem rgba(0, 0, 0, 0.7);
 $box-shadow-md: 0 0.2rem 1rem rgba(0, 0, 0, 0.7);
@@ -23,7 +25,8 @@ $text-shadow-sm: -0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.7);
 $text-shadow-ultra-sm: 0 0 1px rgba(0, 0, 0, 0.7);
 // FONTS
 
-$font-primary: 'Titillium Web', sans-serif !important;
+$font-primary: 'Titillium Web',
+sans-serif !important;
 
 // RANDOM
 
