--- a/YT_FE/src/app/admin/components/panel/panel.component.html
+++ b/YT_FE/src/app/admin/components/panel/panel.component.html
@@ -1,9 +1,11 @@
 <yt-header></yt-header>
 
 <mat-tab-group>
-  <mat-tab label="Genres">
-    <yt-genres></yt-genres>
-  </mat-tab>
-  <mat-tab label="Songs">it works</mat-tab>
+  <mat-tab label="Songs"> <ng-template matTabContent> </ng-template></mat-tab>
   <mat-tab label="Artists">it works </mat-tab>
+  <mat-tab label="Genres">
+    <ng-template matTabContent>
+      <yt-genres></yt-genres>
+    </ng-template>
+  </mat-tab>
 </mat-tab-group>
