--- a/YT_FE/src/app/admin/components/panel/panel.component.html
+++ b/YT_FE/src/app/admin/components/panel/panel.component.html
@@ -1,8 +1,14 @@
 <yt-header></yt-header>
 
 <mat-tab-group>
-  <mat-tab label="Songs"> <ng-template matTabContent> </ng-template></mat-tab>
-  <mat-tab label="Artists">it works </mat-tab>
+  <mat-tab label="Songs">
+
+  </mat-tab>
+  <mat-tab label="Artists">
+    <ng-template matTabContent>
+      <yt-artists></yt-artists>
+    </ng-template>
+  </mat-tab>
   <mat-tab label="Genres">
     <ng-template matTabContent>
       <yt-genres></yt-genres>
