--- a/YT_FE/src/app/admin/components/genres/genres.component.html
+++ b/YT_FE/src/app/admin/components/genres/genres.component.html
@@ -1,12 +1,8 @@
-<div class="x">
-  <yt-db-items-list
-    class="x_list"
-    [title]="'Genres'"
-    [dbItemsCached]="dbItems$ | async"
-  >
+<div class="tab-content">
+  <yt-db-items-list class="tab-content_list" [title]="'Genres'" [dbItemsCached]="dbItems$ | async">
   </yt-db-items-list>
   <mat-divider [vertical]="true"></mat-divider>
-  <div class="x_actions">
+  <div class="tab-content_actions">
     <form class="form rounded" [formGroup]="genreForm" (ngSubmit)="onSave()">
       <div class="form-group">
         <mat-form-field class="full-width">
@@ -15,14 +11,7 @@
       </div>
       <div class="form-group">
         <mat-form-field class="full-width">
-          <input
-            #name
-            matInput
-            type="text"
-            placeholder="Name"
-            formControlName="name"
-            [errorStateMatcher]="matcher"
-          />
+          <input #name matInput type="text" placeholder="Name" formControlName="name" [errorStateMatcher]="matcher" />
           <mat-error *ngIf="genreForm.get('name').hasError('required')">
             Name is <strong>required</strong>
           </mat-error>
@@ -33,23 +22,12 @@
       </div>
 
       <div class="form_buttons">
-        <button
-          type="submit"
-          mat-raised-button
-          color="primary"
-          matTooltip="Click the button to submit the form"
-          [disabled]="genreForm.invalid"
-        >
+        <button type="submit" mat-raised-button color="primary" matTooltip="Click the button to submit the form"
+          [disabled]="genreForm.invalid">
           Save
         </button>
         <div class="margin-left-auto" *ngIf="id.value" #new [@ngIfFade]="new">
-          <button
-            type="button"
-            mat-raised-button
-            color="primary"
-            matTooltip="Add new genre"
-            (click)="resetForm()"
-          >
+          <button type="button" mat-raised-button color="primary" matTooltip="Add new genre" (click)="resetForm()">
             New
           </button>
         </div>
