--- a/YT_FE/src/assets/scss/_components.scss
+++ b/YT_FE/src/assets/scss/_components.scss
@@ -76,3 +76,23 @@
     }
   }
 }
+
+.tab-content {
+  position: relative;
+  display: flex;
+  height: 100%;
+
+  &_list {
+    overflow-x: visible;
+    justify-self: flex-start;
+    display: flex;
+    flex-direction: column;
+
+    background: rgba(0, 0, 0, 0.03);
+  }
+
+  &_actions {
+    margin: 0 auto;
+    align-self: center;
+  }
+}
