--- a/YT_FE/src/app/components/register-form/register-form.component.html
+++ b/YT_FE/src/app/components/register-form/register-form.component.html
@@ -50,7 +50,7 @@
       Register
     </button>
 
-    <yt-spinner></yt-spinner>
+    <!-- <yt-spinner></yt-spinner> -->
   </form>
   <p class="credentials_info">
     Fill in the form to register.
