--- a/YT_FE/src/app/admin/components/panel/panel.component.html
+++ b/YT_FE/src/app/admin/components/panel/panel.component.html
@@ -2,7 +2,9 @@
 
 <mat-tab-group>
   <mat-tab label="Songs">
-
+    <ng-template matTabContent>
+      <yt-songs></yt-songs>
+    </ng-template>
   </mat-tab>
   <mat-tab label="Artists">
     <ng-template matTabContent>
