--- a/YT_FE/src/app/admin/components/songs/songs.component.html
+++ b/YT_FE/src/app/admin/components/songs/songs.component.html
@@ -1,3 +1,116 @@
-<p>
-  songs works!
-</p>
+<div class="tab-content">
+  <yt-db-items-list
+    class="tab-content_list"
+    [title]="'Songs'"
+    [dbItemsCached]="dbItems"
+  >
+  </yt-db-items-list>
+  <mat-divider [vertical]="true"></mat-divider>
+  <div class="tab-content_actions">
+    <form class="form rounded" [formGroup]="songForm" (ngSubmit)="onSave()">
+      <div class="form-group">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="Id" formControlName="id" #id />
+        </mat-form-field>
+      </div>
+      <div class="form-group">
+        <mat-form-field class="full-width">
+          <input
+            #title
+            matInput
+            type="text"
+            placeholder="Title"
+            formControlName="title"
+            [errorStateMatcher]="matcher"
+          />
+          <mat-error *ngIf="songForm.get('title').hasError('required')">
+            Title is <strong>required</strong>
+          </mat-error>
+          <mat-error *ngIf="songForm.get('title').hasError('pattern')">
+            Special characters <strong>not allowed</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="form-group">
+        <mat-form-field class="full-width">
+          <input
+            #ytID
+            matInput
+            type="text"
+            placeholder="YouTube ID"
+            formControlName="youtubeID"
+            [errorStateMatcher]="matcher"
+          />
+          <mat-error *ngIf="songForm.get('youtubeID').hasError('required')">
+            YouTube ID is <strong>required</strong>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="form-group">
+        <mat-form-field>
+          <mat-select placeholder="Genres" formControlName="genres">
+            <mat-option *ngFor="let genre of genres" [value]="genre">
+              {{ genre.name }}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="songForm.get('genres').hasError('required')"
+            >Please choose an genre</mat-error
+          >
+        </mat-form-field>
+      </div>
+
+      <div class="form-group">
+        <mat-form-field>
+          <mat-select placeholder="Artists" formControlName="artists" multiple>
+            <mat-select-trigger>
+              {{
+                songForm.get('artists').value
+                  ? songForm.get('artists').value[0].name
+                  : ''
+              }}
+              <span *ngIf="songForm.get('artists').value?.length > 1">
+                (+{{ songForm.get('artists').value.length - 1 }}
+                {{
+                  songForm.get('artists').value?.length === 2
+                    ? 'other'
+                    : 'others'
+                }})
+              </span>
+            </mat-select-trigger>
+            <mat-option *ngFor="let artist of artists" [value]="artist">{{
+              artist.name
+            }}</mat-option>
+          </mat-select>
+          <mat-error *ngIf="songForm.get('artists').hasError('required')"
+            >Please choose an artists</mat-error
+          >
+        </mat-form-field>
+      </div>
+
+      <div class="form_buttons">
+        <button
+          type="submit"
+          mat-raised-button
+          color="primary"
+          matTooltip="Click the button to submit the form"
+          [disabled]="songForm.invalid"
+        >
+          Save
+        </button>
+        <div class="margin-left-auto" *ngIf="id.value" #new [@ngIfFade]="new">
+          <button
+            type="button"
+            mat-raised-button
+            color="primary"
+            matTooltip="Add new genre"
+            (click)="resetForm()"
+          >
+            New
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
